kubernetes/prod/00-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-mshopping-ingress
  namespace: prod-mshopping
  labels:
    env: prod-mshopping
    app: mshopping
    layer: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: prod-mshopping.cloudcortex.in
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prod-mshopping-service
                port:
                  number: 8080
